# LearnGUI

./: .gitignore  README.md  VoxelMap_User_Guide.ipynb  make_guide.py  pyproject.toml  setup_local.ps1  test_detection.py  visualize_hnc.py
MatlabFolder/IGT/: CMakeLists.txt  README.txt  README_CompileWithVS2008.txt
MatlabFolder/IGT/Applications/: CMakeLists.txt
MatlabFolder/IGT/Applications/IGTQtTemplate/: CMakeLists.txt  IGTQtTemplate.cxx  IGTQtTemplate.h  IGTQtTemplate.ui  main.cxx
MatlabFolder/IGT/Applications/InVivoTrackingOffline/: CMakeLists.txt  InVivoTrackingOffline.cxx  InVivoTrackingOffline.h  InVivoTrackingOffline.ui  TargetTracker.cxx  TargetTracker.h  main.cxx
MatlabFolder/IGT/Applications/igtcudamcfdk/: CMakeLists.txt  igtcudamcfdk.cxx  igtcudamcfdk.ggo
MatlabFolder/IGT/Applications/igtleastsquaresubtract/: CMakeLists.txt  igtleastsquaresubtract.cxx  igtleastsquaresubtract.ggo
MatlabFolder/IGT/Applications/igtmhatodicomseries/: CMakeLists.txt  igtmhatodicomseries.cxx  igtmhatodicomseries.ggo
MatlabFolder/IGT/Applications/igtregisterprojections/: CMakeLists.txt  igtregisterprojections.cxx  igtregisterprojections.ggo
MatlabFolder/IGT/Applications/igtsearchforbestdvfweight/: CMakeLists.txt  igtsearchforbestdvfweight.cxx  igtsearchforbestdvfweight.ggo
MatlabFolder/IGT/Applications/igtsimulatedgeometry/: CMakeLists.txt  igtsimulatedgeometry.cxx  igtsimulatedgeometry.ggo
MatlabFolder/IGT/Applications/igttesttemplate/: CMakeLists.txt  igttesttemplate.cxx  igttesttemplate.ggo
MatlabFolder/IGT/Applications/igttransformwithdvf/: CMakeLists.txt  igttransformwithdvf.cxx  igttransformwithdvf.ggo
MatlabFolder/IGT/Applications/igtvarianximgeometry/: CMakeLists.txt  igtvarianximgeometry.cxx  igtvarianximgeometry.ggo
MatlabFolder/IGT/Cmake/: FindCUDA_wrap.cmake  FindGengetopt.cmake  FindIGT.cmake  IGT.supp  IGTConfig.cmake.in  IGTExternalData.cmake  UseIGT.cmake
MatlabFolder/IGT/Cmake/KWStyle/: IGT.kws.xml.in  IGTFiles.txt.in  KWStyle.cmake
MatlabFolder/IGT/CoMBAT/: Inputs_List_grappa.m  RUN_TrueFISP_reconstruction.m  TrueFISP_all_02mean.m  TrueFISP_all_RECONSTRUCTION.m  VIBE_all_02mean.m  addnoise.m  coil_sensitivity.fig  get_kspace_data.m  grappa.m  kspace_subsample.m  kspacedata_sim.m  organi_01.m  recon_new.m  sensitivy_map.m  smootha.m
MatlabFolder/IGT/CoMBAT/README/: README.docx  ~$README.docx
MatlabFolder/IGT/Code/: CMakeLists.txt  igtCircularConeBeamKalmanFilter.cxx  igtCircularConeBeamKalmanFilter.h  igtConfiguration.h.in  igtCudaLinearCombinationFilter.cu  igtCudaLinearCombinationFilter.cxx  igtCudaLinearCombinationFilter.h  igtCudaLinearCombinationFilter.hcu  igtFixedRayDistanceTracking.cxx  igtFixedRayDistanceTracking.h  igtHITConeBeamReconstructionFilter.h  igtHITConeBeamReconstructionFilter.txx  igtITKToQImage.cxx  igtITKToQImage.h  igtKalmanFilter.cxx  igtKalmanFilter.h  igtLeastSquareSubtractionImageFilter.cxx  igtLeastSquareSubtractionImageFilter.h  igtLinearCombinationFilter.h  igtLinearCombinationFilter.txx  igtMultiple2DMeasurementTracking.cxx  igtMultiple2DMeasurementTracking.h  igtProjectionAlignmentFilter.cxx  igtProjectionAlignmentFilter.h  igtProjectionsReader.cxx  igtProjectionsReader.h  igtRegisterProjectionsFilter.cxx  igtRegisterProjectionsFilter.h  igtTargetTracking.cxx  igtTargetTracking.h  igtTemplateMatchingFilter.cxx  igtTemplateMatchingFilter.h  igtVarianObiRawXimImageFilter.h  igtVarianXimGeometryReader.cxx  igtVarianXimGeometryReader.h  igtVarianXimXMLFileReader.cxx  igtVarianXimXMLFileReader.h  igtWarpBackProjectionImageFilter.h  igtWarpBackProjectionImageFilter.txx  igtWin32Header.h  (+4 more)
MatlabFolder/IGT/Code/Backup/: igtConeBeamTargetTracking - Backup.h  igtConeBeamTargetTracking - Backup.txx
MatlabFolder/IGT/Code/RTKModules/: rtkAttGeometryReader.cxx  rtkAttGeometryReader.h  rtkAttImageIO.cxx  rtkAttImageIO.h  rtkAttImageIOFactory.cxx  rtkAttImageIOFactory.h  rtkAttXMLFileReader.cxx  rtkAttXMLFileReader.h  rtkBackProjectionImageFilter.h  rtkBackProjectionImageFilter.txx  rtkBackwardDifferenceDivergenceImageFilter.h  rtkBackwardDifferenceDivergenceImageFilter.txx  rtkBinNumberReader.h  rtkBinNumberReader.txx  rtkBoellaardScatterCorrectionImageFilter.h  rtkBoellaardScatterCorrectionImageFilter.txx  rtkConjugateGradientConeBeamReconstructionFilter.h  rtkConjugateGradientConeBeamReconstructionFilter.txx  rtkConjugateGradientGetR_kPlusOneImageFilter.h  rtkConjugateGradientGetR_kPlusOneImageFilter.txx  rtkConstantImageSource.h  rtkConstantImageSource.txx  rtkConvertEllipsoidToQuadricParametersFunction.h  rtkCudaAverageOutOfROIImageFilter.h  rtkCudaBackProjectionImageFilter.cu  rtkCudaBackProjectionImageFilter.h  rtkCudaConjugateGradientImageFilter_3f.h  rtkCudaConjugateGradientImageFilter_4f.h  rtkCudaConstantVolumeSeriesSource.h  rtkCudaConstantVolumeSource.h  rtkCudaCropImageFilter.cu  rtkCudaCropImageFilter.h  rtkCudaCyclicDeformationImageFilter.h  rtkCudaDisplacedDetectorImageFilter.h  rtkCudaFDKBackProjectionImageFilter.cu  rtkCudaFDKBackProjectionImageFilter.h  rtkCudaFDKConeBeamReconstructionFilter.h  rtkCudaFDKWeightProjectionFilter.cxx  rtkCudaFDKWeightProjectionFilter.h  rtkCudaFFTConvolutionImageFilter.cu  (+178 more)
MatlabFolder/IGT/MATLABModules/Analysis/: GenerateIVTMovie.m  PlotIVTResults.m  ProcessIVTResults.m  ReadIVTResults.m  RecalculateIVTResults.m  cnr.m  cnrcal.m  cnrmarker.m  cr.m  crmarker.m  erwidth.m  linprof.m  respamp.m  segmentMarker.m  snr.m  snr3.m  snrcal.m
MatlabFolder/IGT/MATLABModules/DataProcessing/: AddRespSigToTiff.m  Build4DDVF.m  CT2CBCT.m  ComputeAvgImg.m  ConvertIMA2MHA.m  CropHnc.m  DICOM2IEC.m  DualGainConvert.m  GenerateMAGIKModel.m  GenerateMAGIKProneModel.m  GenerateMarkerGroundTruth.m  GenerateTrackingGroundTruth.m  His2Att.m  Hnc2Att.m  HndToTiff.m  IEC2DICOM.m  Merge4DDVF.m  MergeMhaVolumes.m  MergeRTKGeometryFiles.m  Mha2Dicom.m  ProjMedFilt.m  ProjResize.m  RemoveHncMarkers.m  ShiftMhaImage.m  (+5 more)
MatlabFolder/IGT/MATLAB_CBCTSimulation/: GenerateSimulatedGeometry.m  README.txt  ResetXCATSimulationFolder.m  SaveXCATBinAsMha.m  SetXCATLesionLocation.m  XCATProjSimulation.m  lscell.m
(+403 files in other folders)
