WRAP_GGO(igttesttemplate_GGO_C igttesttemplate.ggo)
ADD_EXECUTABLE(igttesttemplate igttesttemplate.cxx ${igttesttemplate_GGO_C})
TARGET_LINK_LIBRARIES(igttesttemplate IGT)

IF(IGT_USE_CUDA)
  TARGET_LINK_LIBRARIES(igttesttemplate igtcuda)
ENDIF()

IF(IGT_USE_OPENCL)
  TARGET_LINK_LIBRARIES(igttesttemplate igtopencl)
ENDIF()

# Installation code
IF(NOT IGT_INSTALL_NO_EXECUTABLES)
  FOREACH(EXE_NAME igttesttemplate) 
    INSTALL(TARGETS ${EXE_NAME}
      RUNTIME DESTINATION ${IGT_INSTALL_RUNTIME_DIR} COMPONENT Runtime
      LIBRARY DESTINATION ${IGT_INSTALL_LIB_DIR} COMPONENT RuntimeLibraries
      ARCHIVE DESTINATION ${IGT_INSTALL_ARCHIVE_DIR} COMPONENT Development)
  ENDFOREACH(EXE_NAME) 
ENDIF(NOT IGT_INSTALL_NO_EXECUTABLES)

