WRAP_GGO(rtkadmmwavelets_GGO_C rtkadmmwavelets.ggo)
ADD_EXECUTABLE(rtkadmmwavelets rtkadmmwavelets.cxx ${rtkadmmwavelets_GGO_C})
TARGET_LINK_LIBRARIES(rtkadmmwavelets IGT)

IF (IGT_USE_CUDA)
  TARGET_LINK_LIBRARIES(rtkadmmwavelets igtcuda)
ENDIF (IGT_USE_CUDA)

IF (OPENCL_FOUND)
  TARGET_LINK_LIBRARIES(rtkadmmwavelets igtopencl)
ENDIF (OPENCL_FOUND)

# Installation code
IF(NOT IGT_INSTALL_NO_EXECUTABLES)
  FOREACH(EXE_NAME rtkadmmwavelets) 
    INSTALL(TARGETS ${EXE_NAME}
      RUNTIME DESTINATION ${IGT_INSTALL_RUNTIME_DIR} COMPONENT Runtime
      LIBRARY DESTINATION ${IGT_INSTALL_LIB_DIR} COMPONENT RuntimeLibraries
      ARCHIVE DESTINATION ${IGT_INSTALL_ARCHIVE_DIR} COMPONENT Development)
  ENDFOREACH(EXE_NAME) 
ENDIF(NOT IGT_INSTALL_NO_EXECUTABLES)

